unpackaged/main/default/objects/APXTConga4__Conga_Collection__c/APXTConga4__Conga_Collection__c.object-meta.xml
<CustomObject>
    <label>Conga Collection</label>
    <nameField>
        <label>Conga Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>