unpackaged/main/default/objects/APXTConga4__Conga_Collection__c/fields/APXTConga4__Is_SF1_Enabled__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Is_SF1_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, this collections will be used by the Composermerge.cmp for one sObject type.</description>
    <inlineHelpText>If use this collection for SalesForce 1.</inlineHelpText>
    <label>Is_SF1_Enabled</label>
    <type>Checkbox</type>
</CustomField>