unpackaged/main/default/objects/APXTConga4__Conga_Collection__c/fields/APXTConga4__SF1_Binding_sObject_Type__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__SF1_Binding_sObject_Type__c</fullName>
    <description>The sObject type associated with this collection for SF1.</description>
    <label>SF1_Binding_sObject_Type</label>
    <length>70</length>
    <type>Text</type>
</CustomField>